--- a/default.hbs
+++ b/default.hbs
@@ -28,7 +28,8 @@
         <div class="rimay-main-content"> {{{body}}} </div>
 
         {{!-- Footer --}}
-        {{> "footer"}}
+        {{!-- {{> "footer"}} --}}
+        {{> "footer-two"}}
     </div>
 
     {{!-- Search - partials/widget/search.hbs --}}
