--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,7 +1,7 @@
 .load-more {
   @extend %primary-font;
 
-  font-size: 28px;
+  font-size: 2.2rem;
   color: $primary-color;
   line-height: 1.09;
   letter-spacing: -.7px;
@@ -15,6 +15,7 @@
   transition: background-color .2s ease;
   background-color: transparent;
   display: block;
+  margin-top: 2rem;
 
   &:hover {
     cursor: pointer;
