--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -109,11 +109,11 @@ body:not(.is-article) {
   }
 
   // social
-  &-s a {
-    display: inline-block;
-    padding: 4px;
-    margin-right: 10px;
-  }
+  // &-s a {
+  //   display: inline-block;
+  //   padding: 4px;
+  //   margin-right: 10px;
+  // }
 
   .social-media .icon { color: #ccc  }
 
