--- a/partials/widget/social-media.hbs
+++ b/partials/widget/social-media.hbs
@@ -4,4 +4,5 @@
     <a title="Instagram" href="https://instagram.com/godofredoninja" target="_blank" rel="noopener noreferrer"><span class="icon icon--youtube icon--black">{{> "icons/instagram"}}</span></a>
     <a title="YouTube" href="https://goo.gl/266Xvw" target="_blank" rel="noopener noreferrer"><span class="icon icon--youtube icon--black">{{> "icons/youtube"}}</span></a>
     <a title="GitHub" href="https://github.com/GodoFredoNinja" target="_blank" rel="noopener noreferrer"><span class="icon icon--github icon--black">{{> "icons/github"}}</span></span></a>
+    <a title="RSS" href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" target="_blank" rel="noopener noreferrer"><span class="icon icon--rss icon--black">{{> "icons/rss"}}</span></span></a>
 </div>
