--- a/custom-post-image.hbs
+++ b/custom-post-image.hbs
@@ -3,6 +3,9 @@
 {{!-- Class for <body> --}}
 {{#contentFor "special_body_class"}}is-article is-image{{/contentFor}}
 
+{{!-- Ads large in the header page--}}
+{{> "ads/ad-lg-header"}}
+
 {{!-- Header for my Big Image .pif(post image format) --}}
 {{#post}}
 <div class="pif rimay-wrap u-relative">
