--- a/custom-post-video.hbs
+++ b/custom-post-video.hbs
@@ -5,10 +5,13 @@
 
 {{#post}}
 
+{{!-- Ads large in the header page--}}
+{{> "ads/ad-lg-header"}}
+
 <div class="rimay-wrap">
     <div class="rimay-content">
         {{!-- Article - partials/article/article.hbs --}}
-        <article class="article">
+        <article class="article article-shadow">
             {{!-- Article Header --}}
             <header class="article-header">
                 <h1 class="article-title">{{title}}</h1>
