--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -1,4 +1,4 @@
-<article class="article">
+<article class="article article-shadow">
     {{!-- Article Header --}}
     <header class="article-header">
         <h1 class="article-title">{{title}}</h1>
