--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,6 +52,7 @@
 @import 'components/code';
 @import 'components/search';
 @import 'components/social-share';
+@import 'components/ads';
 
 // pages
 // --------------------------------------------------
