--- a/tag.hbs
+++ b/tag.hbs
@@ -3,5 +3,8 @@
 {{!-- Class for <body> --}}
 {{#contentFor "special_body_class"}}is-tag{{/contentFor}}
 
+{{!-- Ads large in the header page--}}
+{{> "ads/ad-lg-header"}}
+
 {{!-- Loop Story partials/loop.hbs --}}
 {{> "loop"}}
