--- a/home.hbs
+++ b/home.hbs
@@ -2,6 +2,9 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
+{{!-- Ads large in the header page--}}
+{{> "ads/ad-lg-header"}}
+
 <div class="rimay-wrap">
     <div class="rimay-content">
         <div class="rimay-paway">
@@ -33,6 +36,6 @@ into the {body} of the default.hbs template --}}
         {{pagination}}
     </div>
 
-    {{!-- sidebar - partials/sidebar/sidebar-home-top.hbs --}}
+    {{!-- sidebar - partials/sidebar/sidebar.hbs --}}
     {{> "sidebar/sidebar"}}
 </div>
