--- a/post.hbs
+++ b/post.hbs
@@ -3,6 +3,9 @@
 {{!-- Class for <body> --}}
 {{#contentFor "special_body_class"}}is-article{{/contentFor}}
 
+{{!-- Ads large in the header page--}}
+{{> "ads/ad-lg-header"}}
+
 <div class="rimay-wrap">
     <div class="rimay-content">
         {{!-- Article - partials/article/article.hbs --}}
