update author buttons

--- a/partials/sidebar/sidebar-related.hbs
+++ b/partials/sidebar/sidebar-related.hbs
@@ -2,6 +2,9 @@
     <div class="sticky-top-wrap u-flex-1 u-flexColumnTop">
         <div class="sticky">
             <h2>Sidebar Related</h2>
+            {{#post}}
+            {{title}}
+            {{/post}}
         </div>
     </div>
 </aside>
