--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1584,6 +1584,11 @@ body.has-comments .comments {
   background-color: #000;
 }
 
+.button--secondary.button--black {
+  border-color: #000;
+  color: #000;
+}
+
 .load-more {
   font-size: 2.2rem;
   color: #00854F;
@@ -2320,16 +2325,8 @@ body.is-image .godo-a-lg:before {
   margin: 40px 0 20px;
 }
 
-.author-social a {
-  margin-right: 10px;
-  border: 1px solid #000;
-  padding: 10px;
-  color: #000;
-  display: inline-block;
-}
-
-.author-social a:hover {
-  border-color: #00854F;
+.author .button {
+  padding: 10px 15px;
 }
 
 .author-meta > * {
@@ -2346,9 +2343,9 @@ body.is-image .godo-a-lg:before {
   color: #fff;
 }
 
-.author.has-cover .author-social a {
-  color: #fff;
-  border-color: #fff;
+.author.has-cover .button {
+  color: #f1f1f1;
+  border-color: #f1f1f1;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -2377,7 +2374,7 @@ body.is-image .godo-a-lg:before {
 
 .article-title {
   font-size: 2rem;
-  font-weight: 800;
+  font-weight: 900;
   letter-spacing: -0.02em;
   line-height: 1.1;
   padding-top: 20px;
@@ -2623,6 +2620,9 @@ body.is-image .godo-a-lg:before {
   .article::before {
     left: -250px;
     width: 100vw;
+  }
+  .article-title {
+    font-size: 3.2em;
   }
   .article-inner {
     font-size: 1.375rem;
