--- a/author.hbs
+++ b/author.hbs
@@ -45,9 +45,9 @@ into the {body} of the default.hbs template --}}
 
                 {{!-- Author Facebook and Twitter --}}
                 <div class="author-social u-marginTop30">
-                    {{#if facebook}}<a href="{{facebook_url}}" title="Facebook" class="u-fontSizeSmall" target="_blank" rel="noopener noreferrer"><span class="icon icon--facebook">{{> "icons/facebook"}}</span> Facebook</a>{{/if}}
-                    {{#if twitter}}<a href="{{twitter_url}}" title="{{twitter}}" class="u-fontSizeSmall" target="_blank" rel="noopener noreferrer"><span class="icon icon--twitter">{{> "icons/twitter"}}</span> Twitter</a>{{/if}}
-                    <a href="https://feedly.com/i/subscription/feed/{{url absolute="true"}}rss/" target="_blank" rel="noopener noreferrer">📰 {{plural ../pagination.total empty=(t "No posts") singular=(t "1 post") plural=(t "% posts")}}</a>
+                    {{#if facebook}}<a href="{{facebook_url}}" title="Facebook" class="button button--black button--secondary" target="_blank" rel="noopener noreferrer"><span class="icon icon--facebook">{{> "icons/facebook"}}</span> Facebook</a>{{/if}}
+                    {{#if twitter}}<a href="{{twitter_url}}" title="{{twitter}}" class="button button--black button--secondary" target="_blank" rel="noopener noreferrer"><span class="icon icon--twitter">{{> "icons/twitter"}}</span> Twitter</a>{{/if}}
+                    <a href="https://feedly.com/i/subscription/feed/{{url absolute="true"}}rss/" target="_blank" class="button button--black button--secondary" rel="noopener noreferrer">📰 {{plural ../pagination.total empty=(t "No posts") singular=(t "1 post") plural=(t "% posts")}}</a>
                 </div>
 
             </footer>
