--- a/amp.hbs
+++ b/amp.hbs
@@ -11,16 +11,18 @@
     {{amp_ghost_head}}
 
     {{!-- Google Fonst --}}
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Source+Sans+Pro:400,600" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet" />
 
     {{!-- Style Custom --}}
-    <style amp-custom>.u-bgColor{background-color:#00a034}{{> "amp/amp-styles"}}.article-image img{object-fit: cover;object-position: top}</style>
+    <style amp-custom>.amp-ad{width:300px;margin:10px auto}.u-bgColor{background-color:#00A034}{{> "amp/amp-styles"}}</style>
 
     {{!-- The AMP boilerplate --}}
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
     <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
+    <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
     {{amp_components}}
 </head>
@@ -29,8 +31,14 @@
     {{> "amp/amp-header"}}
 
     <main class="main">
+        {{!-- ad --}}
+        {{> "ads/ad-amp-header"}}
+
         {{!-- Content --}}
         {{> "amp/amp-body"}}
+
+        {{!-- ad --}}
+        {{> "ads/ad-amp-medium"}}
 
         {{!-- Related --}}
         {{> "amp/amp-related"}}
@@ -38,6 +46,9 @@
 
     {{!-- Sidenav --}}
     {{> "amp/amp-sidebar"}}
+
+    {{!-- ad --}}
+    {{> "ads/ad-amp-footer"}}
 
     {{!-- Footer copyright --}}
     <footer class="footer">
@@ -49,5 +60,22 @@
 
     {{!-- Only for dev --}}
     {{!-- <script src="{{asset "scripts/amp.js"}}"></script> --}}
+
+    {{!-- Amp Google Analytics --}}
+    <amp-analytics type="googleanalytics" id="analytics1">
+        <script type="application/json">
+        {
+            "vars": {
+                "account": "UA-59153920-1"
+            },
+            "triggers": {
+                "trackPageview": {
+                    "on": "visible",
+                    "request": "pageview"
+                }
+            }
+        }
+        </script>
+    </amp-analytics>
 </body>
 </html>
