--- a/partials/amp/amp-sidebar.hbs
+++ b/partials/amp/amp-sidebar.hbs
@@ -2,7 +2,9 @@
     <div class="close-sidebar u-bgColor" role="button" aria-label="close sidebar" on="tap:sidenav.close" tabindex="0">✕</div>
 
     {{!-- Navigation  --}}
-    <ul class="u-unstyled">{{navigation}}</ul>
+    <ul class="u-unstyled" role="menu">
+        {{navigation}}
+    </ul>
 
     {{!-- Social media --}}
     <div class="follow">
@@ -15,10 +17,10 @@
         {{/if}}
 
         {{!-- Instagram --}}
-        {{!-- <a href="" target="_blank" rel="noopener noreferrer">{{> "amp/icon-instagram"}}</a> --}}
+        <a href="https://bit.ly/godofredoninja-instagram" target="_blank" rel="noopener noreferrer">{{> "amp/icon-instagram"}}</a>
 
         {{!-- Youtube  --}}
-        {{!-- <a href="" target="_blank" rel="noopener noreferrer">{{> "amp/icon-youtube"}}</a> --}}
+        <a href="https://goo.gl/266Xvw" target="_blank" rel="noopener noreferrer">{{> "amp/icon-youtube"}}</a>
 
         {{!-- Telegram --}}
         {{!-- <a href="" target="_blank" rel="noopener noreferrer">{{> "amp/icon-telegram"}}</a> --}}
