--- a/partials/ads/ad-sidebar.hbs
+++ b/partials/ads/ad-sidebar.hbs
@@ -1,3 +1,8 @@
 <aside class="godo-a godo-a-article-sidebar">
-
+    <!-- Ad Sidebar 300x250 -->
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:300px;height:250px"
+        data-ad-client="ca-pub-3462564966072994"
+        data-ad-slot="5533079319"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </aside>
