--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -23,7 +23,12 @@
         {{/if}}
 
         {{!-- Article Inner --}}
-        <div class="article-inner">{{content}}</div>
+        <div class="article-inner">
+            {{!-- Article Content --}}
+            {{content}}
+            {{!-- ad --}}
+            {{> "ads/ad-article-footer"}}
+        </div>
 
         {{!-- Article Comments - partials/article/comment-count.hbs --}}
         {{> "article/comment-count"}}
