--- a/partials/sidebar/sidebar.hbs
+++ b/partials/sidebar/sidebar.hbs
@@ -1,8 +1,8 @@
-<aside class="rimary-sidebar sidebar u-flexColumnTop">
+<div class="rimary-sidebar sidebar u-flexColumnTop">
     <div class="sticky-bottom-wrap u-flexColumnTop u-flexEnd u-flex-1">
         <div class="sticky">
             {{!-- ads for sidebar --}}
             {{> "ads/ad-sidebar"}}
         </div>
     </div>
-</aside>
+</div>
