--- a/partials/widget/social-media.hbs
+++ b/partials/widget/social-media.hbs
@@ -1,8 +1,8 @@
 <div class="social-media">
     {{#if @site.facebook}}<a title="Facebook {{@site.facebook}}" href="{{facebook_url}}" target="_blank" rel="noopener noreferrer"><span class="icon icon--facebook icon--black">{{> "icons/facebook"}}</span></a>{{/if}}
-    {{#if @site.twitter}}<a title="Twitter {{@site.twitter}}" href="{{twitter_url}}" target="_blank" rel="noopener noreferrer"><span class="icon icon--twitter icon--black">{{> "icons/twitter"}}</span></span>{{/if}}
+    {{#if @site.twitter}}<a title="Twitter {{@site.twitter}}" href="{{twitter_url}}" target="_blank" rel="noopener noreferrer"><span class="icon icon--twitter icon--black">{{> "icons/twitter"}}</span></a>{{/if}}
     <a title="Instagram" href="https://instagram.com/godofredoninja" target="_blank" rel="noopener noreferrer"><span class="icon icon--youtube icon--black">{{> "icons/instagram"}}</span></a>
     <a title="YouTube" href="https://goo.gl/266Xvw" target="_blank" rel="noopener noreferrer"><span class="icon icon--youtube icon--black">{{> "icons/youtube"}}</span></a>
-    <a title="GitHub" href="https://github.com/GodoFredoNinja" target="_blank" rel="noopener noreferrer"><span class="icon icon--github icon--black">{{> "icons/github"}}</span></span></a>
-    <a title="RSS" href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" target="_blank" rel="noopener noreferrer"><span class="icon icon--rss icon--black">{{> "icons/rss"}}</span></span></a>
+    <a title="GitHub" href="https://github.com/GodoFredoNinja" target="_blank" rel="noopener noreferrer"><span class="icon icon--github icon--black">{{> "icons/github"}}</span></a>
+    <a title="RSS" href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" target="_blank" rel="noopener noreferrer"><span class="icon icon--rss icon--black">{{> "icons/rss"}}</span></a>
 </div>
