update ad in sidebar and add file ads.txt

--- a/partials/ads/ad-sidebar.hbs
+++ b/partials/ads/ad-sidebar.hbs
@@ -1,8 +1,10 @@
 <aside class="godo-a godo-a-article-sidebar">
-    <!-- Ad Sidebar 300x250 -->
+    {{!-- ad sidebar julio 2019 --}}
     <ins class="adsbygoogle"
-        style="display:inline-block;width:300px;height:250px"
+        style="display:block"
         data-ad-client="ca-pub-3462564966072994"
-        data-ad-slot="5533079319"></ins>
+        data-ad-slot="3902579274"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </aside>
