--- a/custom-post-image.hbs
+++ b/custom-post-image.hbs
@@ -50,7 +50,7 @@
             <div class="article-inner">{{content}}</div>
 
             {{!-- Article Comments - partials/article/comment-count.hbs --}}
-            {{> "article/comment-count"}}
+            {{!-- {{> "article/comment-count"}} --}}
         </div>
 
         {{!-- Newsletter - partials/widget/newsletter.hbs --}}
@@ -77,4 +77,4 @@
 {{#if post.tags}}{{> "article/related"}}{{/if}}
 
 {{!-- Article Related - partials/widget/intagram-feed.hbs --}}
-{{> "widget/instagram-feed"}}
+{{!-- {{> "widget/instagram-feed"}} --}}
