--- a/partials/article/article-meta.hbs
+++ b/partials/article/article-meta.hbs
@@ -11,8 +11,9 @@
     </div>
     {{!-- Comments --}}
     <div class="article-meta--right u-hide-before-md">
-        <div class="js-comments-toggle u-pointer">
-            <span class="icon icon--md icon--comment u-primaryColor">{{> "icons/comment"}}</span> {{t "Comments"}}
-        </div>
+        <a href="#comments" class="js-comments-toggle u-pointer">
+            <span class="icon icon--md icon--comment u-primaryColor">{{> "icons/comment"}}</span>
+            <span style="color:#999">{{t "Comments"}}</span>
+        </a>
     </div>
 </div>
