--- a/partials/article/article.hbs
+++ b/partials/article/article.hbs
@@ -26,7 +26,7 @@
         <div class="article-inner">{{content}}</div>
 
         {{!-- Article Comments - partials/article/comment-count.hbs --}}
-        {{> "article/comment-count"}}
+        {{!-- {{> "article/comment-count"}} --}}
     </div>
 
     {{!-- Newsletter - partials/widget/newsletter.hbs --}}
