--- a/src/scss/layout/_comments.scss
+++ b/src/scss/layout/_comments.scss
@@ -1,18 +1,14 @@
 .comments {
-  z-index: 50;
   width: 100%;
-  overflow-y: auto;
-  background: #fff;
-  border-left: 1px solid #f1f1f1;
-  transform: translateX(100%);
-  transition: .4s;
+  border-top: 2px solid #ddd;
+  padding-top: 30px;
 
-  &-header {
-    padding: 1em 1.25em;
-    border-bottom: 1px solid #ddd;
-  }
+  // &-header {
+  //   padding: 1em 1.25em;
+  //   border-bottom: 1px solid #ddd;
+  // }
 }
 
-body.has-comments .comments {
-  transform: translateX(0)
-}
+// body.has-comments .comments {
+//   transform: translateX(0)
+// }
