--- a/src/scss/layout/_wrapper.scss
+++ b/src/scss/layout/_wrapper.scss
@@ -56,10 +56,10 @@
     margin-right: 0;
   }
 
-  .comments {
-    left: auto !important;
-    width: 470px !important;
-  }
+  // .comments {
+  //   left: auto !important;
+  //   width: 470px !important;
+  // }
 }
 
 @media #{$md-and-up} {
