--- a/custom-post-video.hbs
+++ b/custom-post-video.hbs
@@ -24,7 +24,7 @@
                 {{!-- Article Inner --}}
                 <div class="article-inner">{{content}}</div>
                 {{!-- Article Comments - partials/article/comment-count.hbs --}}
-                {{> "article/comment-count"}}
+                {{!-- {{> "article/comment-count"}} --}}
             </div>
 
             {{!-- Newsletter - partials/widget/newsletter.hbs --}}
@@ -51,4 +51,4 @@
 {{#if post.tags}}{{> "article/related"}}{{/if}}
 
 {{!-- Article Related - partials/widget/intagram-feed.hbs --}}
-{{> "widget/instagram-feed"}}
+{{!-- {{> "widget/instagram-feed"}} --}}
