--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -4,8 +4,8 @@
 
 // color
 // $primary-color: #00a562;
-$primary-color: #00854F;
-$primary-color-gray: #757575;
+$primary-color: #00a562;
+$primary-color-gray: #777;
 
 $color-share: #04a763 #20b66d #34c174 #1ec942 #08d013;
 
