--- a/partials/article/comment-count.hbs
+++ b/partials/article/comment-count.hbs
@@ -1,4 +1,4 @@
-<div class="block--comment u-textAlignCenter">
+<div class="block--comment u-textAlignCenter article-comments-show u-hide">
     <button class="js-comments-toggle button button--primary-line button--large">
         <span class="disqus-comment-count" data-disqus-url="{{url absolute="true"}}">{{t "View Comments"}} (0)</span>
     </button>
